--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,10 @@
+/* Bootstrap icons */
 @import url('bootstrap-icons/font/bootstrap-icons.css');
 
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
+
+/* Tailwind */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
